--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,10 @@ body{
   box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 920px;
+  position: sticky;
+top: 0px;
+z-index: 10;
+
 }
 .Add-patient form {
   display: flex;
@@ -92,7 +96,7 @@ body{
   margin-top: 30px;           /* Space above the section */
   box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for depth */
   width: 100%;
-  max-width: 400px;           /* Limit the width */
+  max-width: 600px;           /* Limit the width */
   
 }
 
@@ -132,7 +136,12 @@ body{
   transform: translateY(-2px);       /* Slight lift on hover */
   box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Stronger shadow on hover */
 }
-
+.patient_delete_button{
+  border: none;
+  cursor: pointer;
+  background-color: white;
+  font-size: 1.5rem;
+}
 
 /* Responsive Design */
 @media (max-width: 600px) {
