--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -170,3 +170,12 @@ z-index: 10;
     font-size: 0.5rem;
   }
 }
+
+.patient-visits-page{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  
+}
