--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -179,3 +179,19 @@ z-index: 10;
   align-items: center;
   
 }
+.patient-search{
+  width: 70%;
+  margin-bottom: 10px;
+  height: 40px;
+  border-radius: 10px;
+  padding: 5px;
+  border: none;
+  border: 1px solid green;
+  outline: none;
+  transition: all 0.3s ease;
+}
+.patient-search:focus{
+  border-color: #0077cc;       /* Change border color */
+  box-shadow: 0 0 5px #0077cc
+
+}
